objects/Account_Document_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Document Requests</relationshipLabel>
        <relationshipName>Account_Document_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Name_Uploaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the document as uploaded, to enable matching with Attachments.</inlineHelpText>
        <label>Document Name Uploaded</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The type of document request.</inlineHelpText>
        <label>Document Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Upload_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set if the user has already uploaded the document.  Set by had if the customer has provided the document via another means.</inlineHelpText>
        <label>Upload Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Document Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Document Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Document Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>